--- a/MidTermAvtanshGuleria/src/app/input/input.component.html
+++ b/MidTermAvtanshGuleria/src/app/input/input.component.html
@@ -1,2 +1,23 @@
 <app-header/>
+<div>
+    <h2>Employee Information</h2>
+    <form (ngSubmit)="outputData(data.value)" #data="ngForm">
+      <label for="employeeName">Employee Name:</label>
+      <input type="text" id="employeeName" [ngModel] name="employeeName" required>
+      
+      <br><br>
+      
+      <label for="employmentStatus">Employment Status:</label><br>
+      <input type="radio" id="fullTime" name="employmentStatus" [ngModel] value="full-time"> Full-Time<br>
+      <input type="radio" id="partTime" name="employmentStatus" [ngModel] value="part-time"> Part-Time<br>
+      <input type="radio" id="seasonal" name="employmentStatus" [ngModel] value="seasonal" > Seasonal
+      
+      <br><br>
+      
+      <input type="checkbox" id="certification" [ngModel] name="certification" >
+      <label for="certification">Certification</label>
+      <button class="btn btn-primary">Submit</button>
+    </form>
+  </div>
+  
 <app-footer/>
