Service Created and Output Component implemented

--- a/MidTermAvtanshGuleria/src/app/output/output.component.html
+++ b/MidTermAvtanshGuleria/src/app/output/output.component.html
@@ -1,2 +1,9 @@
 <app-header/>
+<h1>Output Page</h1>
+<div>
+  <strong>Employee Name:</strong> {{ dataDisplay.employeeName }}<br>
+  <strong>Employment Status:</strong> {{ dataDisplay.employmentStatus }}<br>
+  <strong>Certified:</strong> {{ dataDisplay.certified ? 'Yes' : 'No' }}
+</div>
+
 <app-footer/>
