--- a/MidTermAvtanshGuleria/src/app/output/output.component.html
+++ b/MidTermAvtanshGuleria/src/app/output/output.component.html
@@ -1,4 +1,5 @@
 <app-header/>
+<img  src="../../assets/image.jpg"/>
 <div class="output-container">
     <h1>Output Page</h1>
     <div class="output-info">
