--- a/MidTermAvtanshGuleria/src/app/input/input.component.html
+++ b/MidTermAvtanshGuleria/src/app/input/input.component.html
@@ -1,6 +1,7 @@
 <app-header/>
 <div>
     <h2>Employee Information</h2>
+    <img  src="../../assets/image.jpg"/>
     <form (ngSubmit)="outputData(data.value)" #data="ngForm">
       <label for="employeeName">Employee Name:</label>
       <input type="text" id="employeeName" [ngModel] name="employeeName" required>
